# Ros-workspace

./: .gitignore  COMPLETE_SUMMARY.md  GAZEBO_SITL.md  README.md  SETUP_NOTES.md  frames_2026-03-03_13.45.35.gv  frames_2026-03-04_15.04.38.gv  mav.parm  mav.tlog  mav.tlog.raw  requirements.txt  setup_workspace.sh
astar_planner/: package.xml  setup.cfg  setup.py
astar_planner/astar_planner/: astar_algorithm.py  astar_node.py  costmap_interface.py
astar_planner/config/: astar_params.yaml
astar_planner/launch/: astar_planner.launch.py
config/: integrated_system.yaml
costmap/: package.xml  setup.cfg  setup.py
costmap/config/: costmap_params.yaml
costmap/costmap/: costmap_node.py
costmap/launch/: costmap.launch.py  full_stack.launch.py
launch/: full_system.launch.py
obstacle_detection/: package.xml  setup.py
obstacle_detection/config/: params.yaml
obstacle_detection/launch/: detection.launch.py
obstacle_detection/obstacle_detection/: __init__.py  obstacle_detector.py
scripts/: rtabmap_db_to_ply.py
src/pegasus_autonomy/: package.xml  setup.cfg  setup.py
src/pegasus_autonomy/launch/: pegasus_system.launch.py
src/pegasus_autonomy/pegasus_autonomy/: bottom_stereo_node.py  lidar_node.py  mission_planner_node.py  side_camera_logger_node.py
src/pegasus_ros/: package.xml  setup.cfg  setup.py
src/pegasus_ros/config/: dstar_lite.yaml  icp_odometry.yaml  local_costmap.yaml  path_planner.yaml  px4_offboard.yaml  rgbd_odometry.yaml  rtabmap.yaml  rviz_local_costmap.rviz  rviz_mpc_test.rviz  rviz_planner_test.rviz  rviz_slam.rviz  vlp16.yaml  vtol_dynamics.yaml  zed_x.yaml
src/pegasus_ros/launch/: gazebo_planner_test.launch.py  local_costmap.launch.py  mpc_rviz_test.launch.py  p110_gazebo_bridge_launch.py  path_planner.launch.py  pegasus_full.launch.py  pegasus_sensors.launch.py  pegasus_slam.launch.py  sitl_full.launch.py  vtol1_gazebo_bridge_launch.py
src/pegasus_ros/maps/: dense_disaster_map.pgm  dense_disaster_map.yaml  planning_test_map.pgm  planning_test_map.yaml
src/pegasus_ros/pegasus_autonomy/: dstar_lite_node.py  front_stereo_node.py  global_planner_node.py  lidar_costmap_layer_node.py  local_costmap_node.py  mission_planner_node.py  mpc_sim_path_publisher.py  mpc_sim_vehicle.py  mpc_trajectory_node.py  odometry_selector_node.py  px4_imu_bridge_node.py  px4_odom_bridge_node.py  px4_offboard_node.py  px4_state_subscriber_node.py  static_map_publisher_node.py  static_odom_publisher_node.py  zed_depth_costmap_layer_node.py
src/pegasus_ros/test/: test_imu.py  test_velodyne.py  test_zed_x.py
src/pegasus_ros/worlds/: p110_world.sdf  pegasus_planning_test.sdf
