<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astar_planner</name>
  <version>1.0.0</version>
  <description>
    A* global path planner for large fixed-wing/VTOL UAVs.

    Integrates the weighted A* algorithm from Pegasus-Disaster-Response/Ros-workspace
    (commit c752b073, March 4 2026) with the existing obstacle_detection and costmap
    packages.  Replaces the RRT* planner while preserving all obstacle detection,
    Kalman tracking, and zone-based avoidance capabilities.
  </description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
