<?xml version="1.0"?>
<package format="3">
  <name>costmap</name>
  <version>0.1.0</version>
  <description>
    3-D/2-D local costmap for Pegasus UAV obstacle avoidance.
    Builds an OccupancyGrid from LiDAR point clouds and Kalman-tracked obstacles,
    inflates costs per zone, and projects dynamic obstacles forward in time.
  </description>
  <maintainer email="pegasus@example.com">Pegasus Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
